[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/item.gd" type="Script" id=1]
[ext_resource path="res://assets/Ma√ßa.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 223.129

[node name="item" type="Area2D"]
script = ExtResource( 1 )
type = "common"

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false
offset = Vector2( -327, -330 )

[node name="colisao" type="CollisionShape2D" parent="."]
position = Vector2( 0, -101.67 )
shape = SubResource( 1 )
[connection signal="area_entered" from="." to="." method="_on_item_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_item_area_exited"]
[connection signal="input_event" from="." to="." method="_on_garrafaVidro_input_event"]
